bug fix: notification box went out of screen on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ nav {
     color: #6a6a6e;
     z-index: 5;
     position: absolute;
-    right: 10px;
+    right: -150px;
     padding: 10px;
     border-radius: 6px;
     border: 0.5px solid#bfbfc5;
